# grafeo

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  codecov.yml  mkdocs.yml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  crates.yml  pypi.yml  release.yml
crates/grafeo/: Cargo.toml
crates/grafeo-python/: Cargo.toml  README.md  pyproject.toml
crates/graphos/: Cargo.toml
crates/graphos-engine/: Cargo.toml
crates/graphos-python/: Cargo.toml  pyproject.toml
crates/graphos/src/: lib.rs
docs/: CNAME  changelog.md  index.md  requirements.txt  tags.md
docs/algorithms/: centrality.md  community.md  index.md  link-prediction.md  metrics.md  path-finding.md  similarity.md
docs/api/: index.md
docs/architecture/: crates.md  index.md  overview.md
docs/comparisons/: cypher-vs-gql.md  graphql-vs-gql.md  gremlin-vs-gql.md  index.md  sparql-vs-gql.md
docs/contributing/: code-style.md  index.md  setup.md  testing.md
docs/getting-started/: configuration.md  first-graph.md  index.md  installation.md  quickstart.md
docs/includes/: abbreviations.md
docs/overrides/: main.html
docs/stylesheets/: extra.css
docs/tutorials/: fraud-detection.md  index.md  knowledge-graph.md  recommendations.md  social-network.md
docs/user-guide/: index.md  transactions.md
scripts/: ci-clean.ps1  ci-clean.sh  ci-local.ps1  ci-local.sh
tests/python/: benchmark_graphos.py  benchmark_phases.py  conftest.py  synthetic_data.py  test_algorithms_benchmark.py  (+3 more)
(+179 files in other folders)
